[gd_scene load_steps=2 format=3 uid="uid://dvpvbh4qwoiv8"]

[ext_resource type="Script" path="res://scenes/popups/save_first.gd" id="1_2pca0"]

[node name="SaveFirst" type="AcceptDialog"]
title = "Save Your Game?"
initial_position = 1
size = Vector2i(400, 109)
unresizable = true
popup_window = true
max_size = Vector2i(400, 16384)
ok_button_text = "Yes"
dialog_text = "Any unsaved progress will be lost. Would you like to save your game first?"
dialog_autowrap = true
script = ExtResource("1_2pca0")

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_custom_action"]
